about me text changed for proper one. visual looks good. need to fix socials background on journey and projects on mobile. next add projects and do sth with blog. deploying and maybe im ready now to send my website to someone else

--- a/sites/css/about_css.css
+++ b/sites/css/about_css.css
@@ -120,7 +120,7 @@
 
 /* this found on dev.to */
 .appear2 {
-  transition: all 1s;
+  transition: all 0.9s;
   opacity: 0;
   transform: translateY(20px);
 
@@ -415,6 +415,11 @@
 #arrow {
   margin-top: 20px;
   margin-left: 5%;
+}
+
+/* this found on dev.to */
+.appear2 {
+  transition: all 0.4s;
 }
 
 .infoTxt {
