--- a/sites/css/projects_css.css
+++ b/sites/css/projects_css.css
@@ -182,6 +182,23 @@
   border: 3px solid white;
 }
 
+/* this found on dev.to */
+.appear2 {
+  transition: all 0.4s;
+  opacity: 0;
+  transform: translateY(20px);
+
+&.inview2 {
+    opacity: 1;
+    transform: none;
+    @for $i from 1 through 5 {
+      &:nth-child(#{$i}) {
+        transition-delay: $i * 0.1s;
+    }
+  }
+}
+}
+
 
 .footer {
   background-color: rgb(247, 244, 244);
